# photo_competition

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
conf/: settings.py  urls.py
models_app/admin/: __init__.py
models_app/admin/comment/: admin.py
models_app/admin/image/: admin.py
models_app/admin/like/: admin.py
models_app/admin/post/: admin.py
models_app/admin/status/: admin.py
models_app/admin/user/: admin.py
models_app/migrations/: 0001_initial.py  0002_alter_comment_parent.py  0003_alter_image_is_active.py  0004_alter_image_is_active.py
models_app/models/: __init__.py
models_app/models/comment/: models.py
models_app/models/image/: models.py
models_app/models/like/: models.py
models_app/models/post/: models.py
models_app/models/status/: models.py
models_app/models/user/: models.py
